<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">Poly\'Incidents</string>
    <string name="app_declaration">Déclaration</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Connexion</string>
    <string name="title_activity_logout">Déconnexion</string>
    <string name="title_settings">Paramètres</string>
    <string name="title_help">Aides</string>
    <string name="title_search">Recherche</string>

    <!-- Strings related to declaration form -->
    <string name="title_declaration">Déclarer un incident</string>
    <string name="title_incident">Titre</string>
    <string name="type_incident">Type</string>
    <string name="importance_incident">Importance</string>
    <string name="notimportant_incident">Pas important</string>
    <string name="important_incident">Important</string>
    <string name="veryimportant_incident">Très important</string>
    <string name="takepicturetext_incident">Prendre une photo</string>


    <!-- Strings related to login -->
    <string name="mot_de_passe">Mot de passe</string>
    <string name="identifiant">Identifiant</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_id">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="title_activity_twitter_login">TwitterLoginActivity</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">3Tw3Uu6w8lCW7idPLV66d0cBy</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">LXnFRGkNjKJV6okzqsJpeqXYB5cENA5rhKx5NyW692Dm7KSmWg
</string>

</resources>
