<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/title_declaration"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:id="@+id/textView2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_incident_title"
                android:hint="Titre" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/xxxxx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_action_incident_type"
                android:hint="Type d'incident"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_incident_description"
                android:hint="Description de l'incident" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/importance_incident"
            android:text="@string/importance_incident"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:textSize="18dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notimportant_radio_btn"
                android:text="@string/notimportant_incident"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/important_radio_btn"
                android:text="@string/important_incident"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/veryimportant_radio_btn"
                android:text="@string/veryimportant_incident"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button_picture"
        android:layout_width="263dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/take_picture"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button_pic"
        android:text="@string/takepicturetext_incident" />

    <ImageView
        android:id="@+id/take_picture"
        android:layout_width="97dp"
        android:layout_height="65dp"
        android:layout_above="@+id/sendButton"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button"
        android:onClick="sendDeclaration"

        android:text="Valider"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_picture"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="  Lieu"
        android:inputType="textPersonName" />


</RelativeLayout>
